--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
   <meta name="description" content="cool">
   <meta name="author" content="henry yu">
 
-  <title>henry y.</title>
+  <title>henry</title>
 
   <!-- Custom styles for this template -->
 
@@ -43,26 +43,13 @@ layout: default
       <br>
 
       <b>current plays & reads</b><br>
-      <a href="https://store.steampowered.com/app/1172650/INDUSTRIA/"> industria </a> @ pc <br>
-      <a href="https://store.steampowered.com/app/1062110/UNSIGHTED/"> unsighted </a> @ pc <br>
-      <a href="https://www.playstation.com/en-us/games/kena-bridge-of-spirits/"> kena: bridge of spirits </a> @ ps5 <br>
-      <a href="https://www.epicgames.com/store/en-US/p/neo-the-world-ends-with-you"> neo: the world ends with you </a> @ pc <br>
-      <a href="https://na.leagueoflegends.com/en-us/"> league of legends </a> @ pc <br>
       <a href="https://en.wikipedia.org/wiki/Junji_Ito%27s_Cat_Diary:_Yon_%26_Mu"> junji ito's cat diary: yon & mu </a> @ junji ito<br>
       <a href="https://www.goodreads.com/book/show/54814676-crying-in-h-mart"> crying in hmart </a> @ michelle zauner <br>
 
       <br>
 
       <b>current tunes</b><br> 
-      <a href="https://www.youtube.com/watch?v=U8XHwiMOyWQ"> look at me </a> @ george <br>
-      <a href="https://www.youtube.com/watch?v=bjTEMBB-mjY"> we belong together </a> @ big bang <br>
-      <a href="https://www.youtube.com/watch?v=htxDCKpXpWU"> alone with you </a> @ alina baraz <br>
-      <a href="https://www.youtube.com/watch?v=0e8I7XcjSkc"> ずるくない？ </a> @ ぷにぷに電機 <br>
-      <a href="https://www.youtube.com/watch?v=dGZqpVCJP3k"> 群青 </a> @ yoasobi <br>
       <a href="https://www.youtube.com/watch?v=UanCaiNjQ9E"> 風的顏色 </a> @ nineone# <br>
-      <a href="https://www.youtube.com/watch?v=C4XLz1cnSXY"> ヘイセイ (mode:月宮とと) </a> @ stargaze shelter <br>
-      <a href="https://www.youtube.com/watch?v=mSWBAdpk5Cc"> tifa's theme </a> @ jazztick <br>
-  
       <br>
 
     </div>
