--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="cool">
-  <meta name="author" content="henry yu">
+  <meta name="author" content="henry">
 
   <title>henry</title>
 
